--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./scripts/start.js",
     "build": "node ./scripts/build.js",
-    "clean": "rm -rf build"
+    "clean": "rimraf build"
   },
   "license": "MIT",
   "repository" : {
