--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-typescript",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A universal boilerplate based on create-react-app for React+Typescript",
   "scripts": {
     "start": "node ./scripts/start.js",
@@ -13,8 +13,9 @@
     "url": "https://github.com/provkylej/react-typescript-template.git"
   },
   "devDependencies": {
-    "autoprefixer": "6.3.7",
-    "case-sensitive-paths-webpack-plugin": "1.1.2",
+    "autoprefixer": "6.4.0",
+    "awesome-typescript-loader": "2.2.1",
+    "case-sensitive-paths-webpack-plugin": "1.1.3",
     "chalk": "1.1.3",
     "cross-spawn": "4.0.0",
     "css-loader": "0.23.1",
@@ -27,24 +28,24 @@
     "html-webpack-plugin": "2.22.0",
     "json-loader": "0.5.4",
     "opn": "4.0.2",
-    "postcss-loader": "0.9.1",
+    "postcss-loader": "0.10.1",
     "promise": "7.1.1",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
-    "ts-loader": "^0.8.2",
-    "tslint": "^3.14.0",
-    "tslint-loader": "^2.1.5",
-    "tslint-react": "^0.4.0",
-    "typescript": "^2.0.0",
+    "tslint": "3.15.0",
+    "tslint-loader": "2.1.5",
+    "tslint-react": "1.0.0",
+    "typescript": "2.0.0",
     "url-loader": "0.5.7",
-    "webpack": "1.13.1",
+    "webpack": "1.13.2",
     "webpack-dev-server": "1.14.1",
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "@types/react": "^0.14.27",
-    "@types/react-dom": "^0.14.14",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "@types/node": "6.0.37",
+    "@types/react": "0.14.31",
+    "@types/react-dom": "0.14.15",
+    "react": "15.3.1",
+    "react-dom": "15.3.1"
   }
 }
