--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-typescript",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A universal boilerplate based on create-react-app for React+Typescript",
   "scripts": {
-    "start": "node ./scripts/start.js",
-    "build": "node ./scripts/build.js",
-    "clean": "rimraf build"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "clean": "rimraf build",
+    "test": "node scripts/test.js --env=jsdom"
   },
   "license": "MIT",
   "repository": {
@@ -13,39 +14,71 @@
     "url": "https://github.com/provkylej/react-typescript-template.git"
   },
   "devDependencies": {
-    "autoprefixer": "6.4.0",
-    "awesome-typescript-loader": "2.2.1",
-    "case-sensitive-paths-webpack-plugin": "1.1.3",
+    "autoprefixer": "6.5.1",
+    "awesome-typescript-loader": "3.0.0-beta.18",
+    "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
-    "cross-spawn": "4.0.0",
-    "css-loader": "0.24.0",
-    "detect-port": "1.0.0",
+    "connect-history-api-fallback": "1.3.0",
+    "cross-spawn": "4.0.2",
+    "css-loader": "0.26.0",
+    "detect-port": "1.0.1",
+    "dotenv": "2.0.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.22.0",
+    "html-webpack-plugin": "2.24.0",
+    "http-proxy-middleware": "0.17.2",
+    "jest": "17.0.2",
     "json-loader": "0.5.4",
-    "opn": "4.0.2",
-    "postcss-loader": "0.10.1",
+    "object-assign": "4.1.0",
+    "path-exists": "2.1.0",
+    "postcss-loader": "1.0.0",
     "promise": "7.1.1",
-    "rimraf": "2.5.4",
+    "react-dev-utils": "0.4.2",
+    "recursive-readdir": "2.1.0",
+    "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
-    "tslint": "3.15.1",
-    "tslint-loader": "2.1.5",
-    "tslint-react": "1.0.0",
-    "typescript": "2.0.0",
+    "tslint": "4.3.1",
+    "tslint-loader": "3.3.0",
+    "tslint-react": "2.3.0",
+    "typescript": "2.1.5",
     "url-loader": "0.5.7",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.14.1",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
     "@types/node": "6.0.37",
-    "@types/react": "0.14.31",
-    "@types/react-dom": "0.14.15",
-    "react": "15.3.1",
-    "react-dom": "15.3.1"
+    "@types/react": "15.0.3",
+    "@types/react-dom": "0.14.21",
+    "react": "15.4.2",
+    "react-dom": "15.4.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>[/\\\\](build|docs|node_modules)[/\\\\]"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    }
   }
 }
